# penguinpad

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  index.html
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  release.yml
assets/windows/: penguinpad.rc
include/: app.h  controller.h  gamepad.h  ui.h  version.h.in
src/: app.cpp  controller.cpp  gamepad.cpp  main.cpp  ui.cpp
